--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./Imagenes/Desarrollos Inmobiliarios render.jpg" class="d-block w-100"
+                        <img src="./Imagenes/Index_Desarrollos_ _Inmobiliarios _render.jpg" class="d-block w-100"
                             alt="Render de una ciudad">
                     </div>
                     <div class="carousel-item">
-                        <img src="./Imagenes/Clinica 1.jpg" class="d-block w-100" alt="Render de una Casa">
+                        <img src="./Imagenes/Index_Render_de_casa.jpg" class="d-block w-100" alt="Render de una Casa">
                     </div>
                     <div class="carousel-item">
-                        <img src="./Imagenes/Clinica 2.jpg" class="d-block w-100"
-                            alt="Render  de una recepcion de una Clinica">
+                        <img src="./Imagenes/Index_Render_de_hotel.jpg" class="d-block w-100"
+                            alt="Render  de una habitacion de hotel">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
